--- a/src/App.module.css
+++ b/src/App.module.css
@@ -9,3 +9,128 @@
   padding: 0 1rem;
 }
 
+.wrapper .newTask {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+
+  position: relative;
+  top: -1.8rem;
+}
+
+.newTask input {
+  width: 100%;
+  background: var(--gray-500);
+  color: var(--gray-300);
+  border: 1px solid var(--gray-700);
+  border-radius: 0.5rem;
+  padding: 1rem;
+
+  line-height: 140%;  
+}
+
+.newTask button[type=submit] {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 0.5rem;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  background: var(--blue-500);
+  color: var(--gray-100);
+  border: none;
+  font-weight: 700;
+  font-size: 0.875rem;
+
+  cursor: pointer;
+  transition: background-color 0.1s;
+}
+
+.newTask button[type=submit] svg {
+  width: 1.063rem;
+  height: 1.063rem;
+}
+
+.newTask button[type=submit]:hover {
+  background: var(--blue-100);
+
+}
+
+.tasks {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75;
+}
+
+.tasksInfo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1.5rem;
+}
+
+.tasksCreated strong {
+  font-size: 0.875rem;
+  font-weight: 700;
+  color: var(--blue-100);
+  margin-right: 0.5rem;
+}
+
+.tasksCreated span {
+  background: var(--gray-400);
+  color: var(--gray-200);
+  border-radius: 999px;
+  padding: 0.125rem 0.5rem;
+
+  font-weight: 700;
+  font-size: 0.75rem;
+}
+
+.tasksCompleted strong {
+  font-size: 0.875rem;
+  font-weight: 700;
+  color: var(--purple-100);
+  margin-right: 0.5rem;
+}
+
+.tasksCompleted span {
+  background: var(--gray-400);
+  color: var(--gray-200);
+  border-radius: 999px;
+  padding: 0.125rem 0.5rem;
+
+  font-weight: 700;
+  font-size: 0.75rem;
+}
+
+.tasksContent {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 4rem 1.5rem;
+  gap: 1rem;
+  border-top: 1px solid var(--gray-400);
+  border-radius: 0.5rem;
+}
+
+.tasksContent svg {
+  width: 3.5rem;
+  height: 3.5rem;
+  color: var(--gray-400);
+}
+
+.paragraph {
+  color: var(--gray-300);
+  font-size: 1rem;
+}
+
+.paragraph strong {
+  font-weight: 700;
+  line-height: 140%;
+}
+
+.paragraph p {
+  font-weight: 400;
+  line-height: 140%;
+}
