--- a/src/App.module.css
+++ b/src/App.module.css
@@ -20,6 +20,7 @@
 
 .newTask input {
   width: 100%;
+  height: 3.375rem;
   background: var(--gray-500);
   color: var(--gray-300);
   border: 1px solid var(--gray-700);
@@ -28,6 +29,15 @@
 
   line-height: 140%;  
 }
+
+.newTask input:focus {
+  outline: none;
+  border: 1px solid var(--purple-500);
+  color: var(--gray-100);
+}
+
+
+
 
 .newTask button[type=submit] {
   display: flex;
@@ -41,6 +51,9 @@
   border: none;
   font-weight: 700;
   font-size: 0.875rem;
+
+  width: 5.625rem;
+  height: 3.25rem;
 
   cursor: pointer;
   transition: background-color 0.1s;
